<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">移动网管</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ap_name">TZ1000</string>
    <string name="ap_password">12345678</string>
    <string name="approximately_symbol">~</string>
    <string name="greater_equal_symbol"> >=</string>
    <string name="lower_equal_symbol">&lt;=</string>
    <string name="wh_err_bit_rate">&lt;=1E-6</string>
    
    <string name="prompt_userName">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="checkbox_remember">自动登录</string>
    <string name="action_login_in">登录</string>

    <string name="error_invalid_email">请输入正确的用户名</string>
    <string name="error_invalid_password">密码不能为空</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">请输入用户名</string>
    <string name="error_dialog">不能为空</string>
    <string name="error_different_password">两次输入不一致</string>
    
    <string name="fragment_third_title">路线建议</string>
    <string name="fragment_second_title">故障描述</string>
    <string name="fragment_first_title">用户信息</string>

    <string name="activity_title_workList">工单查询结果</string>
    <string name="activity_title_workDetail">工单详情</string>
    <string name="activity_title_history">历史工单查询</string>
    <string name="activity_title_diagnosis">诊断</string>

    <string name="activity_diagnosis_config">配置文件下载</string>
    <string name="activity_diagnosis_updata">升级下载的接口</string>

    <string name="activity_work_details_accept">接受</string>
    <string name="activity_work_details_refuse">拒绝</string>
    <string name="activity_work_details_done">处理</string>
    <string name="activity_work_details_updata">结果上报</string>
    <string name="activity_work_details_fail">无法解决</string>
    
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    
    <string name="wifi_detail_ssid">SSID：</string>
    <string name="wifi_detail_info">状态消息：</string>
    <string name="wifi_detail_safe">安全性：</string>
    <string name="wifi_detail_strong">信号强度：</string>
    <string name="wifi_detail_speed" >连接速度：</string>
    <string name="wifi_detail_ip" >IP地址：</string>
    <string name="wifi_detail_location_mac" >本机MAC：</string>
    <string name="wifi_detail_ap_mac" >Ap MAC：</string>
    <string name="wifi_detail_net_hint" >网络掩码：</string>
    <string name="wifi_detail_gate" >网关：</string>
    <string name="wifi_detail_dns1" >DNS1：</string>
    <string name="wifi_detail_dns2" >DNS2：</string>
    <string name="wifi_detail_button" >Ping测试</string>
    
    <string name="wifi_speedtest_down" >下载速率</string>
    <string name="wifi_speedtest_up" >上传速率</string>
    <string name="wifi_speedtest_max" >峰值：</string>
    <string name="wifi_speedtest_avg" >平均值：</string>
    <string name="wifi_speedtest_button" >测速</string>
    
    
    <string name="target_ip_input_label">目标地址：</string>
    <string name="action_probe__start">开始Ping</string>
    <string name="action_probe__stop">停止Ping</string>
    <string name="error_invalid_target_ip">IP地址不合法</string>
    <string name="ping_service" >Ping服务</string>
    <string name="ping_ip_address" >Ping地址：</string>
    <string name="ping_send_package" >发包数：</string>
    <string name="ping_lost_package" >丢包数：</string>
    <string name="ping_min_rtt" >最小时延：</string>
    <string name="ping_max_rtt" >最大时延：</string>
    <string name="ping_avg_rtt" >平均时延：</string>
    <string name="ping_rtt_mean" >时延平均偏差值：</string>
    
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    
    <string name="ac_eoc_funtion_set_ipmode">上网方式</string>
    <string name="ac_eoc_funtion_set_staticip">静态Ip</string>
    
    
    
</resources>
